--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <div class="container">
+        <h1 class="turn"></h1>
+        <div class="board"></div>
+        <h1 class="result"></h1>
+    </div>
 </body>
 </html>
