finished Logic and UI

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
         <h1 class="turn"></h1>
         <div class="board"></div>
-        <h1 class="result"></h1>
     </div>
+    <h1 class="result"></h1>
+    <div class="btnn"></div>
 </body>
 </html>
