--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css" />
     <script defer src="./script.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Tic Tac Toe</h1>
     <div class="container">
-        <h1 class="turn"></h1>
-        <div class="board"></div>
+      <h1 class="turn"></h1>
+      <div class="board"></div>
     </div>
     <h1 class="result"></h1>
     <div class="btnn"></div>
-</body>
+  </body>
 </html>
